...
  public static let auctionDetailTabRightsAnalysis = L10n.tr("Localizable", "auction_detail_tab_rights_analysis", fallback: "권리분석")
  /// 경매상태
  public static let auctionFilterAuctionStatus = L10n.tr("Localizable", "auction_filter_auction_status", fallback: "경매상태")
  /// 낙찰
  public static let auctionFilterBidWon = L10n.tr("Localizable", "auction_filter_bidWon", fallback: "낙찰")
  /// 건물용도
  public static let auctionFilterBuildingUsage = L10n.tr("Localizable", "auction_filter_building_usage", fallback: "건물용도")
  /// %1$@ 외 %2$@
  public static func auctionFilterMultiSelect(_ p1: Any, _ p2: Any) -> String {
    return L10n.tr("Localizable", "auction_filter_multi_select", String(describing: p1), String(describing: p2), fallback: "%1$@ 외 %2$@")
  }
  /// 가격
  public static let auctionFilterPrice = L10n.tr("Localizable", "auction_filter_price", fallback: "가격")
...
  public static let auctionIntroduceCertifiedListingDescription = L10n.tr("Localizable", "auction_introduce_certified_listing_description", fallback: "임장보고서가 존재해 정확한 정보를 확인할 수 있어요.")
  /// 인증매물
  public static let auctionIntroduceCertifiedListingTitleA = L10n.tr("Localizable", "auction_introduce_certified_listing_title_A", fallback: "인증매물")
  /// 이란
  public static let auctionIntroduceCertifiedListingTitleB = L10n.tr("Localizable", "auction_introduce_certified_listing_title_B", fallback: "이란")
  /// 상품
  public static let auctionItem = L10n.tr("Localizable", "auction_item", fallback: "상품")
  /// 기일 임박 순
  public static let auctionSortByImpendingDueDate = L10n.tr("Localizable", "auction_sort_by_impending_due_date", fallback: "기일 임박 순")
  /// 최신 등록순
  public static let auctionSortByLatestRegistration = L10n.tr("Localizable", "auction_sort_by_latest_registration", fallback: "최신 등록순")
  /// 유찰 적은 순
  public static let auctionSortByLessBidding = L10n.tr("Localizable", "auction_sort_by_less_bidding", fallback: "유찰 적은 순")
...
  public static let errorUnknown = L10n.tr("Localizable", "error_unknown", fallback: "알 수 없는 오류")
  /// 전체
  public static let homeDefaultArea = L10n.tr("Localizable", "home_default_area", fallback: "전체")
  /// 관심 내역이 없어요.
  public static let interestViewNone = L10n.tr("Localizable", "interest_view_none", fallback: "관심 내역이 없어요.")
  /// 아파트
  public static let itemTypeApartment = L10n.tr("Localizable", "item_type_apartment", fallback: "아파트")
  /// 문의하실 내용을 입력해주세요.
  public static let mypageChatBody = L10n.tr("Localizable", "mypage_chat_body", fallback: "문의하실 내용을 입력해주세요.")
  /// [민달팽이] 문의 메일
  public static let mypageChatTitle = L10n.tr("Localizable", "mypage_chat_title", fallback: "[민달팽이] 문의 메일")
  /// 애플로 로그인
  public static let mypageLoginApple = L10n.tr("Localizable", "mypage_login_apple", fallback: "애플로 로그인")
...
